syntax = "proto3";

package com.kohan.proto.push.v1;

import "google/protobuf/empty.proto";

message FCMTokenInfo {
  string userId = 1;
  string token = 2;
}

message RegisterFCMToken {
  FCMTokenInfo fcmTokenInfo = 1;
  string accessedAt = 2;
}

service FCMTokenService {
  rpc registerFCMToken(RegisterFCMToken) returns (google.protobuf.Empty) {}
  rpc unregisterFCMToken(FCMTokenInfo) returns (google.protobuf.Empty) {}
}